@@ -2,12 +2,18 @@
  *  Compute distances between columns of two dense or sparse matrices
  */
 
-/* internal codes for metric / distance:
+/* Internal codes for metric / distance:
  *  0 = euclidean
  *  1 = maximum
  *  2 = manhattan
  *  3 = minkowski   (*param1 = exponent p)
  *  4 = canberra
+ *  5 = jaccard
+ *  6 = minimum     (asymmetric jaccard without normalization)
+ *
+ * Reference implementations are in CPP_col_dist_dense(), with comments if necessary.
+ * Sparse matrix code in CPP_col_dist_sparse() is often more complex and should be
+ * read after consulting the reference implementation.
  */
 
 /* make symmetric matrix from right upper triangle */
@@ -22,7 +28,7 @@ void mk_symmetric_matrix(NumericMatrix x) {
 
 /* validate metric code and parameter(s) */
 void check_metric(int metric_code, double p1) {
-  if (metric_code < 0 || metric_code > 4)
+  if (metric_code < 0 || metric_code > 6)
     stop("internal error -- invalid metric code");
   if (metric_code == 3 && (!R_FINITE(p1) || p1 < 0.0))
     stop("internal error -- Minkowski p-parameter out of range [0, Inf)");  
@@ -42,7 +48,7 @@ NumericMatrix CPP_col_dist_dense(NumericMatrix x, NumericMatrix y, int metric_co
         shared(dist)
   for (int col2 = 0; col2 < nc2; col2++) {
     NumericVector tmp(nr);
-    double accum;
+    double accum, denom;
     int col1_max = (symmetric) ? col2 + 1 : nc1;
     for (int col1 = 0; col1 < col1_max; col1++) {
       NumericMatrix::Column vx = x(_, col1);  // column <col1> of first matrix
@@ -68,6 +74,14 @@ NumericMatrix CPP_col_dist_dense(NumericMatrix x, NumericMatrix y, int metric_co
       case 4:
         tmp = abs(vx) + abs(vy); // denominator |x_i| + |y_i|
         dist(col1, col2) = sum(ifelse(tmp > 0, abs(vx - vy) / tmp, 0.0));
+        break;
+      case 5:
+        accum = sum(pmin(vx, vy)); /* x_i and y_i must be non-negative */
+        denom = sum(pmax(vx, vy));
+        dist(col1, col2) = (denom > 0) ? accum / denom : 1.0; /* special case: J(0, 0) = 1 */
+        break;
+      case 6:
+        dist(col1, col2) = sum(pmin(vx, vy)); /* overlap of probability distributions (if ||x||_1 = ||y||_1 = 1) */
         break;
       }
     }
@@ -107,7 +121,7 @@ NumericMatrix CPP_col_dist_sparse(int nc1, IntegerVector xp, IntegerVector xrow,
       int xrow_curr = (xi < xi_max) ? _xrow[xi] : INT_MAX;
       int yrow_curr = (yi < yi_max) ? _yrow[yi] : INT_MAX;
       
-      double accum = 0.0;
+      double accum = 0.0, denom = 0.0;
       double x_curr, y_curr;
       double d_xy, x_plus_y;
       while (xi < xi_max || yi < yi_max) {
@@ -151,6 +165,18 @@ NumericMatrix CPP_col_dist_sparse(int nc1, IntegerVector xp, IntegerVector xrow,
           d_xy = fabs(x_curr - y_curr);
           if (x_plus_y > 0) accum += d_xy / x_plus_y;
           break;
+        case 5:
+          if (x_curr >= y_curr) {
+            accum += y_curr;  /* min(x_i, y_i) */
+            denom += x_curr; /* max(x_i, y_i) */
+          }
+          else {
+            accum += x_curr;
+            denom += y_curr;
+          }
+          break;
+        case 6:
+          accum += (x_curr >= y_curr) ? y_curr : x_curr; /* min(x_i, y_i) */
         }
       } /* while (xi, yi) */
 
@@ -158,16 +184,20 @@ NumericMatrix CPP_col_dist_sparse(int nc1, IntegerVector xp, IntegerVector xrow,
       case 0:
         dist(col1, col2) = sqrt(accum);
         break;
-      case 1:
-      case 2:
-      case 4:
-        dist(col1, col2) = accum;
-        break;
       case 3:
         if (param1 > 1.0)
           dist(col1, col2) = pow(accum, 1.0 / param1);
         else
           dist(col1, col2) = accum;
+        break;
+      case 5:
+        dist(col1, col2) = (denom > 0) ? accum / denom : 1.0; /* (SUM min(x_i, y_i)) / (SUM max(x_i, y_i)) */
+        break;
+      case 1:
+      case 2:
+      case 4:
+      case 6:
+        dist(col1, col2) = accum;
         break;
       }
 
