@@ -5,7 +5,16 @@ library(wordspace)
 library(Matrix)
 
 matrix.equal <- function(x, y, name="matrix comparison", tol=1e-10, verbose=TRUE) {
-  if (nrow(x) == nrow(y) && ncol(x) == ncol(y)) {
+  if (any(is.na(x))) {
+    cat(sprintf("%s: missing values in first matrix\n", name))
+    invisible(FALSE)
+  } else if (any(is.na(y))) {
+    cat(sprintf("%s: missing values in second matrix\n", name))
+    invisible(FALSE)
+  } else if (nrow(x) != nrow(y) || ncol(x) != ncol(y)) {
+    if (verbose) cat(sprintf("%s: different matrix formats %d x %d != %d x %d\n", name, nrow(x), ncol(x), nrow(y), ncol(y)))
+    invisible(FALSE)
+  } else {
     max.diff <- max(abs(x - y))
     if (max.diff < tol) {
       invisible(TRUE)
@@ -13,10 +22,15 @@ matrix.equal <- function(x, y, name="matrix comparison", tol=1e-10, verbose=TRUE
       if (verbose) cat(sprintf("%s: largest difference between matrices = %g exceeds tolerance limit\n", name, max.diff))
       invisible(FALSE)
     }
-  } else {
-    if (verbose) cat(sprintf("%s: different matrix formats %d x %d != %d x %d\n", name, nrow(x), ncol(x), nrow(y), ncol(y)))
-    invisible(FALSE)
   }
+}
+
+## compute distance matrix based on R function
+## d.fnc must compute distances between corresponding rows of two matrices
+dist.matrix.R <- function (M, d.fnc, ...) {
+  M <- as.matrix(M)
+  idx <- seq_len(nrow(M))
+  outer(idx, idx, function (i, j) d.fnc(M[i, , drop=FALSE], M[j, , drop=FALSE], ...))
 }
 
 
@@ -116,6 +130,82 @@ stopifnot(matrix.equal(M1a.cb.ws, as.matrix(M1a.cb.R)))
 stopifnot(matrix.equal(M2a.cb.ws, as.matrix(M2a.cb.R)))
 stopifnot(all(diag(M1a.cb.ws) == 0)) # must be exact zeroes
 stopifnot(all(diag(M2a.cb.ws) == 0))
+
+
+## Jaccard metric and overlap measure
+Jaccard.fnc <- function (x, y, convert=FALSE) {
+  stopifnot(all(x >= 0) && all(y >= 0))
+  res <- rowSums(pmin(x, y)) / rowSums(pmax(x, y))
+  if (convert) 1 - res else res
+}
+overlap.fnc <- function (x, y, normalized=FALSE, convert=FALSE) {
+  stopifnot(all(x >= 0) && all(y >= 0))
+  res <- rowSums(pmin(x, y))
+  if (!normalized) res <- res / rowSums(x)
+  if (convert) 1 - res else res
+}
+
+M1a.jc.ws <- dist.matrix(M1a, method="jaccard", convert=FALSE)
+M2.jc.ws <- dist.matrix(M2, method="jaccard", convert=FALSE)
+M1a.ol.ws <- dist.matrix(M1a, method="overlap", convert=FALSE)
+M2.ol.ws <- dist.matrix(M2, method="overlap", convert=FALSE)
+
+M1a.jc.R <- dist.matrix.R(M1a, Jaccard.fnc, convert=FALSE)
+M2.jc.R <- dist.matrix.R(M2, Jaccard.fnc, convert=FALSE)
+M1a.ol.R <- dist.matrix.R(M1a, overlap.fnc, convert=FALSE)
+M2.ol.R <- dist.matrix.R(M2, overlap.fnc, convert=FALSE)
+
+stopifnot(matrix.equal(M1a.jc.ws, M1a.jc.R))
+stopifnot(matrix.equal(M2.jc.ws, M2.jc.R))
+stopifnot(matrix.equal(M1a.ol.ws, M1a.ol.R))
+stopifnot(matrix.equal(M2.ol.ws, M2.ol.R))
+
+M1a.jc.ws <- dist.matrix(M1a, method="jaccard", convert=TRUE) # Jaccard metric
+M2.jc.ws <- dist.matrix(M2, method="jaccard", convert=TRUE)
+
+M1a.jc.R <- dist.matrix.R(M1a, Jaccard.fnc, convert=TRUE)
+M2.jc.R <- dist.matrix.R(M2, Jaccard.fnc, convert=TRUE)
+
+stopifnot(matrix.equal(M1a.jc.ws, M1a.jc.R))
+stopifnot(matrix.equal(M2.jc.ws, M2.jc.R))
+
+M3a <- rbind(c(0, 2, 1, 0, 1), # test against known results (similarity measures only)
+             c(4, 1, 3, 0, 0))
+M3a.jc.gold <- rbind(c(   1, 2/10), # gold = expected similarity matrix
+                     c(2/10,    1))
+M3a.ol.gold <- rbind(c(  1, 2/4),
+                     c(2/8,   1))
+M3a.olraw.gold <- rbind(c(4, 2),    # unnormalized overlap
+                        c(2, 8))
+
+M3b <- rbind(c(0, 0, 0),
+             c(0, 0, 0),
+             c(1, 1, 0))
+M3b.jc.gold <- rbind(c(1, 1, 0),    # J(0, 0) = 1, but J(0, x) = 0
+                     c(1, 1, 0),
+                     c(0, 0, 1))
+M3b.ol.gold <- rbind(c(1, 1, 1),    # o(0, x) = 1, but o(x, 0) = 0
+                     c(1, 1, 1),
+                     c(0, 0, 1))
+M3b.olraw.gold <- rbind(c(0, 0, 0), # raw overlap or(0, x) = or(x, 0) = 0
+                        c(0, 0, 0),
+                        c(0, 0, 2))
+
+M3a.jc.ws <- dist.matrix(M3a, method="jaccard", convert=FALSE)
+M3a.ol.ws <- dist.matrix(M3a, method="overlap", convert=FALSE)
+M3a.olraw.ws <- dist.matrix(M3a, method="overlap", convert=FALSE, normalized=TRUE)
+
+stopifnot(matrix.equal(M3a.jc.ws,    M3a.jc.gold))
+stopifnot(matrix.equal(M3a.ol.ws,    M3a.ol.gold))
+stopifnot(matrix.equal(M3a.olraw.ws, M3a.olraw.gold))
+
+M3b.jc.ws <- dist.matrix(M3b, method="jaccard", convert=FALSE)
+M3b.ol.ws <- dist.matrix(M3b, method="overlap", convert=FALSE)
+M3b.olraw.ws <- dist.matrix(M3b, method="overlap", convert=FALSE, normalized=TRUE)
+
+stopifnot(matrix.equal(M3b.jc.ws,    M3b.jc.gold))
+stopifnot(matrix.equal(M3b.ol.ws,    M3b.ol.gold))
+stopifnot(matrix.equal(M3b.olraw.ws, M3b.olraw.gold))
 
 
 ## cosine similarity and angular distance
